--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
----
+---HTML index file for obotics website
 layout: page
 title: Latest News
 description: "A place where roboticist can collaborate on robot designs, code, electronics, and hardware."
